# WLKATA_ROS1_pickandplace

./: README.md
stella_wlkata_pap/: CMakeLists.txt  package.xml
stella_wlkata_pap/launch/: stella_wlkata.launch
stella_wlkata_pap/src/: stella_wlkata_node.cpp  stella_wlkata_shm_node.cpp
